[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ortus-flask"
dynamic = ["version"]
description = "Ortus CMS integration for Flask applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Copyright (c) 2026 Rohindia. All Rights Reserved."}
authors = [
    {name = "Ayush", email = "ayushalokdubey@gmail.com"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-cors",
]

[project.urls]
"Homepage" = "https://rohindia.com"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]



[tool.setuptools.packages.find]
where = ["."]
include = ["ortus_flask*"]
[tool.setuptools_scm]
version_file = "ortus_flask/_version.py"
